--- a/e_step_04_jquery/css/base/reset.css
+++ b/e_step_04_jquery/css/base/reset.css
@@ -4,7 +4,7 @@
 html,body{width: 100%; height: 100%;  color:#333;}
 html, body, h1, h2, h3, h4, h5, h6, 
 p, div, img, table, figure, 
-header, article, section, footer, nav,aside,main 
+header, article, section, footer, nav,aside,main, 
 ul,ol,dl,li,dt,dd{
 	margin:0; padding:0; border:0; outline:0;
 	font: 100%/1.2 "myriad pro", arial, nanumGothic, dotum, sans-serif; }
