--- a/e_step_04_jquery/css/src/slide_button.css
+++ b/e_step_04_jquery/css/src/slide_button.css
@@ -28,4 +28,6 @@ body{overflow-x:hidden;}
   .slide_btn>ul>li:nth-child(2)>a:hover{background-image:url('../../img/jd2.jpg');}
   .slide_btn>ul>li:nth-child(3)>a:hover{background-image:url('../../img/wb2.jpg');}
 
+  .leftMove{left:-250px;}
+
 #footBox{width: 100%;height: 120px;background-color:#555; box-sizing: border-box; padding:1.5em 0.7em 0.3em; color:#fff;}
