--- a/e_step_04_jquery/css/src/slideBanner_01.css
+++ b/e_step_04_jquery/css/src/slideBanner_01.css
@@ -4,7 +4,7 @@
 #headBox{width: 100%;height: 100px;background-color:#faa;}
   h1{width: 100%;height: 100%;text-align:center; color:#333; font-size: 4em;}
 
-#addBannerBox{width: 100%;height: 550px;background-color:#ccc; border: 2px solid #333; border-left:0; border-right:0;position: relative; overflow:hidden;}
+#addBannerBox{width: 100%;height: 550px;background-color:#ccc; border: 2px solid #333; border-left:0; border-right:0;position: relative;}
   .btn{width: 100%;height: 0;position:absolute; top:50%; left:0;}
   .btn button{width: 100px;height: 200px;background-color:rgba(255,255,255,0.5);font-size:2em; font-weight:bold; float:left;margin-top: -100px;}
   .btn button:hover{background-color:rgba(255,255,255,0.8);}
@@ -12,10 +12,10 @@
 
 #addBannerBox>ul{width: 400%; height: 100%; background-color:#dda;margin-left: -100%;}
 #addBannerBox>ul>li{width: 25%; height: 100%;float:left;}
-#addBannerBox>ul>li:nth-child(1){background-color:#aaf;}
-#addBannerBox>ul>li:nth-child(2){background-color:#afa;}
-#addBannerBox>ul>li:nth-child(3){background-color:#aff;}
-#addBannerBox>ul>li:nth-child(4){background-color:#ffa;}
+#addBannerBox>ul>li.banner_1{background-color:#aaf;}
+#addBannerBox>ul>li.banner_2{background-color:#afa;}
+#addBannerBox>ul>li.banner_3{background-color:#aff;}
+#addBannerBox>ul>li.banner_4{background-color:#ffa;}
 #addBannerBox>ul>li>a{width: 100%;height: 100%;display:block; color:#fff; font-size:4em; text-align: center;line-height:550px;}
 
 #contentBox{width: 100%;height: 800px;background-color:#3fa;}
